prusti-tests/tests/verify/ui/counterexamples/enums-5.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/enums-5.rs:11:11
   |
11 | #[ensures(result)]
   |           ^^^^^^
   |
note: the error originates here
  --> $DIR/enums-5.rs:12:1
   |
12 | / fn test1(x: Choose) -> bool {
13 | |     match x {
14 | |         Choose::One => true,
15 | |         Choose::Two { x, y } => true,
16 | |         Choose::Three(c, d) => c != 'c' || d,
17 | |     }
18 | | }
   | |_^
note: counterexample for "x"
        initial value: Choose::Three(
            ?,
            ?,
        )
        final value:   Choose::Three(
            ?,
            ?,
        )
  --> $DIR/enums-5.rs:12:10
   |
12 | fn test1(x: Choose) -> bool {
   |          ^
note: counterexample for "x"
        final value:   0
  --> $DIR/enums-5.rs:15:23
   |
15 |         Choose::Two { x, y } => true,
   |                       ^
note: counterexample for "y"
        final value:   false
  --> $DIR/enums-5.rs:15:26
   |
15 |         Choose::Two { x, y } => true,
   |                          ^
note: counterexample for "c"
        final value:   'c' (0x63)
  --> $DIR/enums-5.rs:16:23
   |
16 |         Choose::Three(c, d) => c != 'c' || d,
   |                       ^
note: counterexample for "d"
        final value:   false
  --> $DIR/enums-5.rs:16:26
   |
16 |         Choose::Three(c, d) => c != 'c' || d,
   |                          ^
note: counterexample for result
        final value:   false
  --> $DIR/enums-5.rs:12:24
   |
12 | fn test1(x: Choose) -> bool {
   |                        ^^^^

error: aborting due to previous error

